# vizprompt

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  project.md  pyproject.toml  spec.md
docs/: flow_chat_integration.md  flow_cycle_detection.md  node_map_check.md  plan_convert_map.md
tests/: test_flow_convert_map.py
vizprompt/cli/: commands.py  terminal.py
vizprompt/core/: base.py  flow.py  node.py
vizprompt/llm/: base.py  gemini.py  ollama.py  openai.py
