[project]
name = "vizprompt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "google-genai>=1.14.0",
    "ollama>=0.4.8",
    "openai>=1.78.0",
    "ruamel-yaml>=0.18.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vizprompt"]

[project.scripts]
vizprompt = "vizprompt.cli.commands:main"
